--- a/HashTable.vcxproj.filters
+++ b/HashTable.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="HashItemNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HashTableNodeProxy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HashTable.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HashItemNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HashTableNodeProxy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
